numbers and letters

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- box to show password-->
     <div id="pwBox">password</div>
     <!-- button to geneerate -->
-    <button id="genBtn">geneerate</button>
+    <button id="genBtn">generate</button>
     <!-- button copy to clipboard -->
     <button>copy</button>
     <!-- external js -->
