--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <!-- box to show password-->
     <div id="pwBox">password</div>
     <!-- button to geneerate -->
-    <button id="genBtn">generate</button>
+    <button onclick="showNewPassword()">generate</button>
     <!-- button copy to clipboard -->
-    <button>copy</button>
+
+    <button onclick="copyClipboard()">Copy Password</button>
     <!-- external js -->
     <script src="./app.js"></script>
   </body>
